# msglib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/toolchains/: mingw-w64-i686.cmake  mingw-w64-x86_64.cmake
examples/: example.cpp
include/: msglib.h
src/: msglib.cpp
